# Dziekanat

./: CMakeLists.txt  Group.cpp  Group.h  classsessss.dia  imports.h  main.cpp  use case
grades/: Grade.cpp  Grade.h  Grade_manager.cpp  Grade_manager.h
groups/: Group.cpp  Group.h  Group_manager.cpp  Group_manager.h
people/: Manager.cpp  Manager.h  Person.cpp  Person.h
people/students/: Student.cpp  Student.h  Student_manager.cpp  Student_manager.h
people/teachers/: Teacher.cpp  Teacher.h  Teacher_manager.cpp  Teacher_manager.h
subjects/: Subject.cpp  Subject.h  Subject_manager.cpp  Subject_manager.h
